positioning fix on mobile header

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,7 @@ nav ul li a:visited {color: #ffffff;}
     .title-block h1 {
         font-size: 4.4vw;
         line-height: 5.5vw;
+        margin-bottom: 1.05vw;
     }
 
 	.title-block h1 span {
